@@ -12,13 +12,16 @@
 -(void)applicationDidFinishLaunching:(NSNotification *)aNotification
 {
     [[NSUserNotificationCenter defaultUserNotificationCenter] setDelegate:self];
+#if OSX_DEPLOYMENT_TARGET >= 1014
     [[UNUserNotificationCenter currentNotificationCenter] setDelegate:self];
+#endif
 }
 
 -(BOOL)userNotificationCenter:(NSUserNotificationCenter *)center shouldPresentNotification:(NSUserNotification *)notification{
     return YES;
 }
 
+#if OSX_DEPLOYMENT_TARGET >= 1014
 -(void)userNotificationCenter:(UNUserNotificationCenter *)center
        willPresentNotification:(UNNotification *)notification
          withCompletionHandler:(void (^)(UNNotificationPresentationOptions options))completionHandler{
@@ -29,5 +32,6 @@
 
     completionHandler(presentationOptions);
 }
+#endif
 
 @end
